<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.16</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>net.cloudappi</groupId>
	<artifactId>openapi2soapui</artifactId>
	<version>2.1.0-beta-1</version>
	<packaging>pom</packaging>

	<name>openapi2soapui</name>
	<description>Openapi to SoapUI Project</description>
	<url>https://github.com/apiaddicts/openapi2soapui</url>

	<licenses>
		<license>
			<name>GNU Lesser General Public License (LGPLV3+)</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0.html</url>
		</license>
	</licenses>

	<organization>
		<name>Apiaddicts</name>
		<url>https://apiaddicts.org</url>
	</organization>

	<scm>
		<connection>scm:git:git://github.com/apiaddicts/openapi2soapui.git</connection>
		<developerConnection>scm:git:ssh://github.com:apiaddicts/openapi2soapui.git</developerConnection>
		<url>https://github.com/apiaddicts/openapi2soapui/tree/master</url>
	</scm>


	<modules>
		<module>openapi2soapui-core</module>
		<module>openapi2soapui-rest</module>
		<module>openapi2soapui-cli</module>
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>21</java.version>

		<springdoc.version>2.8.17</springdoc.version>
		<soapui.version>5.9.1</soapui.version>
		<swagger-parser.version>2.1.45</swagger-parser.version>
		<json.version>20260522</json.version>
		<lombok.version>1.18.46</lombok.version>
		<swagger-v2-parser.version>1.0.76</swagger-v2-parser.version>
		<swagger-v2-core.version>1.6.16</swagger-v2-core.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-parser</artifactId>
				<version>${swagger-v2-parser.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-core</artifactId>
				<version>${swagger-v2-core.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-models</artifactId>
				<version>${swagger-v2-core.version}</version>
			</dependency>
			<dependency>
				<groupId>io.swagger</groupId>
				<artifactId>swagger-annotations</artifactId>
				<version>${swagger-v2-core.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>jar</id>
			<properties>
				<packaging.type>jar</packaging.type>
			</properties>
		</profile>
		<profile>
			<id>war</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<properties>
				 <packaging.type>war</packaging.type>
			</properties>
		</profile>
		<profile>
			<id>INTE</id>
			<properties>
                <packaging.type>war</packaging.type>
			</properties>
		</profile>
		<profile>
			<id>TEST</id>
			<properties>
                <packaging.type>war</packaging.type>
			</properties>
		</profile>
		<profile>
			<id>PROD</id>
			<properties>
                <packaging.type>war</packaging.type>
			</properties>
		</profile>
	 </profiles>

	<repositories>
		<repository>
			<id>SmartBearPluginRepository</id>
			<url>https://rapi.tools.ops.smartbear.io/nexus/content/groups/public/</url>
		</repository>
	</repositories>

</project>
